opam-version: "2.0"
name:         "cuid-jv"
version:      "2.0.4"
maintainer:   "Martin Schut <m.schut@wommm.nl>"
authors:      [ "Marco Aurélio da Silva <marcoonroad@gmail.com>" "Martin Schut <m.schut@wommm.nl>" ]
bug-reports:  "https://gitlab.com/schutm/ocaml-cuid/issues"
license:      "MIT"
homepage:     "https://gitlab.com/schutm/ocaml-cuid"
dev-repo:     "git://gitlab.com/schutm/ocaml-cuid.git"
synopsis:     "Jv based CUID generator for OCaml for usage with js_of_ocaml"

build: [
    [ "dune" "subst" ] {pinned}
    [ "dune" "build" "-p" name "-j" jobs ]
]

run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
    "ocaml" {>= "4.12.1"}
    "brr" {>= "0.0.3"}
    "cuid" {>= "2.0.0"}
    "dune" {build & >= "2.9.3"}
    "bisect_ppx" {with-test & >= "2.8.0"}
]
