opam-version: "2.0"
name:         "cuid-jv"
version:      "0.3"
bug-reports:  "https://github.com/marcoonroad/ocaml-cuid/issues"
license:      "MIT"
homepage:     "https://github.com/marcoonroad/ocaml-cuid"
dev-repo:     "git://github.com/marcoonroad/ocaml-cuid.git"
synopsis:     "Jv based CUID generator for OCaml for usage with js_of_ocaml"

maintainer: [
    "Marco Aurélio da Silva <marcoonroad@gmail.com>"
    "Martin Schut <m.schut@wommm.nl>"
]
authors: [
    "Marco Aurélio da Silva <marcoonroad@gmail.com>"
    "Martin Schut <m.schut@wommm.nl>"
]

build: [
    [ "dune" "subst" ] {pinned}
    [ "dune" "build" "-p" name "-j" jobs ]
]

run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
    "ocaml" {>= "4.08.0"}
    "brr" {>= "0.0.2"}
    "cuid-core" {>= "0.3"}
    "dune" {build & >= "2.9.3"}
    "bisect_ppx" {with-test & >= "2.8.0"}
]
