opam-version: "2.0"
name:         "cuid-unix"
version:      "1.1"
maintainer:   "Martin Schut <m.schut@wommm.nl>"
authors:      [ "Marco Aurélio da Silva <marcoonroad@gmail.com>" "Martin Schut <m.schut@wommm.nl>" ]
bug-reports:  "https://gitlab.com/schutm/ocaml-cuid/issues"
license:      "MIT"
homepage:     "https://gitlab.com/schutm/ocaml-cuid"
dev-repo:     "git://gitlab.com/schutm/ocaml-cuid.git"
synopsis:     "Unix based CUID generator for OCaml"

build: [
    [ "dune" "subst" ] {pinned}
    [ "dune" "build" "-p" name "-j" jobs ]
]

run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
    "ocaml" {>= "4.12.1"}
    "dune" {build & >= "2.9.3"}
    "re" {with-test & >= "1.10.3"}
    "alcotest" {with-test & >= "1.5.0"}
    "bisect_ppx" {with-test & >= "2.8.0"}
]
