opam-version: "2.0"
name:         "cuid"
version:      "1.0"
maintainer:   "Marco Aurélio da Silva <marcoonroad@gmail.com>"
authors:      "Marco Aurélio da Silva <marcoonroad@gmail.com>"
bug-reports:  "https://github.com/marcoonroad/ocaml-cuid/issues"
license:      "MIT"
homepage:     "https://github.com/marcoonroad/ocaml-cuid"
dev-repo:     "git://github.com/marcoonroad/ocaml-cuid.git"
synopsis:     "CUID generator for OCaml"

build: [
    [ "dune" "subst" ] {pinned}
    [ "dune" "build" "-p" name "-j" jobs ]
]

run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
    "ocaml" {>= "4.13.0"}
    "re" {>= "1.10.3"}
    "base" {>= "v0.14.3"}
    "mirage-crypto" {>= "0.10.5"}
    "mirage-crypto-rng" {>= "0.10.5"}
    "dune" {build & >= "2.9.3"}
    "alcotest" {with-test & >= "1.5.0"}
    "bisect_ppx" {with-test & >= "2.8.0"}
]
