opam-version: "2.0"
name:         "cuid"
version:      "2.0.0"
maintainer:   "Martin Schut <m.schut@wommm.nl>"
authors:      [ "Marco Aurélio da Silva <marcoonroad@gmail.com>" "Martin Schut <m.schut@wommm.nl>" ]
bug-reports:  "https://gitlab.com/schutm/ocaml-cuid/issues"
license:      "MIT"
homepage:     "https://gitlab.com/schutm/ocaml-cuid"
dev-repo:     "git://gitlab.com/schutm/ocaml-cuid.git"
synopsis:     "CUID generator for OCaml"

build: [
    [ "dune" "subst" ] {pinned}
    [ "dune" "build" "-p" name "-j" jobs ]
]

run-test: [ "dune" "runtest" "-p" name "-j" jobs ]

depends: [
    "ocaml" {>= "4.12.1"}
    "dune" {build & >= "2.9.3"}
    "bisect_ppx" {with-test & >= "2.8.0"}
]
